--- a/function_dapr_twitter/src/.vscode/tasks.json
+++ b/function_dapr_twitter/src/.vscode/tasks.json
@@ -59,7 +59,10 @@
 			"type": "func",
 			"dependsOn": "build",
 			"options": {
-				"cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1"
+				"cwd": "${workspaceFolder}/bin/Debug/netcoreapp3.1",
+				"env": {
+					"DAPR_HTTP_PORT": "3501"
+				}
 			},
 			"command": "host start",
 			"isBackground": true,
