--- a/function_dapr_twitter/components/secretstore.yaml
+++ b/function_dapr_twitter/components/secretstore.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: demosecrets
 spec:
-  type: secretstores.local.localsecretstore
+  type: secretstores.local.file
   metadata:
     - name: secretsFile
       value: C:\_dev\secrets.json
