--- a/function_dapr_twitter/components/statestore.yaml
+++ b/function_dapr_twitter/components/statestore.yaml
@@ -8,4 +8,7 @@ spec:
     - name: redisHost
       value: localhost:6379
     - name: redisPassword
-      value: ""
+      secretKeyRef:
+        name: redisPass
+auth:
+    secretStore: demosecrets
