--- a/signalr/signalr.server/deployment.yaml
+++ b/signalr/signalr.server/deployment.yaml
@@ -21,13 +21,26 @@ spec:
             - name: http
               containerPort: 80
           imagePullPolicy: "Always"
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "100m"
+            limits:
+              memory: "160Mi"
+              cpu: "160m"
           env:
             - name: Logging__LogLevel__Microsoft.AspNetCore.SignalR
               value: Debug
             - name: Logging__LogLevel__Microsoft.AspNetCore.Http.Connections
               value: Debug
             - name: RedisPassword
-              value: 
+              value: oz4yV2HEPv
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            failureThreshold: 1
+            periodSeconds: 10
 
 ---
 apiVersion: v1
