--- a/signalr/signalr.server/signalr.server.csproj
+++ b/signalr/signalr.server/signalr.server.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="5.0.7" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.8.2" />
   </ItemGroup>
 
 </Project>
