--- a/aks_spot_managed_identity/deploy/linux_deployment.yaml
+++ b/aks_spot_managed_identity/deploy/linux_deployment.yaml
@@ -11,6 +11,7 @@ spec:
       name: nginx
       labels:
         app: nginx
+        aadpodidbinding: aks-spot-mi
     spec:
       nodeSelector:
         "kubernetes.io/os": "linux"
