--- a/signalr/signalr.server/deployment.yaml
+++ b/signalr/signalr.server/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: signalr-server
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: signalr-server
           image: cmendibl3/signalr-server
