--- a/aks_rook/deploy/rook-ceph-cluster-values.yaml
+++ b/aks_rook/deploy/rook-ceph-cluster-values.yaml
@@ -1,4 +1,6 @@
 operatorNamespace: rook-ceph
+toolbox:
+  enabled: true
 cephBlockPools: []
 cephObjectStores: []
 cephClusterSpec:
@@ -17,7 +19,7 @@ cephClusterSpec:
         # IMPORTANT: If volumes specified by the storageClassName are not portable across nodes
         # this needs to be set to false. For example, if using the local storage provisioner
         # this should be false.
-        portable: true
+        portable: false
         # Since the OSDs could end up on any node, an effort needs to be made to spread the OSDs
         # across nodes as much as possible. Unfortunately the pod anti-affinity breaks down
         # as soon as you have more than one OSD per node. If you have more OSDs than nodes, K8s may
