--- a/aks_rook/deploy/rook-ceph-cluster-values.yaml
+++ b/aks_rook/deploy/rook-ceph-cluster-values.yaml
@@ -22,14 +22,23 @@ cephClusterSpec:
         portable: false
         # Since the OSDs could end up on any node, an effort needs to be made to spread the OSDs
         # across nodes as much as possible. Unfortunately the pod anti-affinity breaks down
-        # as soon as you have more than one OSD per node. If you have more OSDs than nodes, K8s may
-        # choose to schedule many of them on the same node. What we need is the Pod Topology
-        # Spread Constraints, which is alpha in K8s 1.16. This means that a feature gate must be
-        # enabled for this feature, and Rook also still needs to add support for this feature.
-        # Another approach for a small number of OSDs is to create a separate device set for each
-        # zone (or other set of nodes with a common label) so that the OSDs will end up on different
-        # nodes. This would require adding nodeAffinity to the placement here.
+        # as soon as you have more than one OSD per node. The topology spread constraints will
+        # give us an even spread on K8s 1.18 or newer.
         placement:
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: ScheduleAnyway
+              labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - rook-ceph-osd
+          tolerations:
+            - key: storage-node
+              operator: Exists
+        preparePlacement:
           tolerations:
             - key: storage-node
               operator: Exists
@@ -41,21 +50,17 @@ cephClusterSpec:
                       operator: In
                       values:
                         - npceph
-          podAntiAffinity:
-            preferredDuringSchedulingIgnoredDuringExecution:
-              - weight: 100
-                podAffinityTerm:
-                  labelSelector:
-                    matchExpressions:
-                      - key: app
-                        operator: In
-                        values:
-                          - rook-ceph-osd
-                      - key: app
-                        operator: In
-                        values:
-                          - rook-ceph-osd-prepare
-                  topologyKey: kubernetes.io/hostname
+          topologySpreadConstraints:
+            - maxSkew: 1
+              # IMPORTANT: If you don't have zone labels, change this to another key such as kubernetes.io/hostname
+              topologyKey: topology.kubernetes.io/zone
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - rook-ceph-osd-prepare
         resources:
           limits:
             cpu: "500m"
