--- a/aks_velero_multiregion/app/app_with_pv_files.yaml
+++ b/aks_velero_multiregion/app/app_with_pv_files.yaml
@@ -16,32 +16,30 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nginx-example
+  name: nginx-example-az-files
   labels:
     app: nginx
 
 ---
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: data
-  namespace: nginx-example
-  labels:
-    app: nginx
+  name: pvc-azurefile
+  namespace: nginx-example-az-files
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 50Mi
-  storageClassName: default
+      storage: 100Gi
+  storageClassName: azurefile-csi
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: nginx-example
+  namespace: nginx-example-az-files
 spec:
   replicas: 1
   selector:
@@ -53,17 +51,17 @@ spec:
         app: nginx
     spec:
       volumes:
-        - name: data
+        - name: azfiles
           persistentVolumeClaim:
-            claimName: data
+           claimName: pvc-azurefile
       containers:
         - image: nginx:1.17.6
           name: nginx
           ports:
             - containerPort: 80
           volumeMounts:
-            - mountPath: "/var/data"
-              name: data
+            - mountPath: "/var/azfiles"
+              name: azfiles
               readOnly: false
 
 ---
@@ -73,7 +71,7 @@ metadata:
   labels:
     app: nginx
   name: my-nginx
-  namespace: nginx-example
+  namespace: nginx-example-az-files
 spec:
   ports:
     - port: 80
