--- a/aks_wasm_dotnet/dotnet_wasm/dotnet_wasm.csproj
+++ b/aks_wasm_dotnet/dotnet_wasm/dotnet_wasm.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Wasi.Sdk" Version="0.1.1" />
+    <PackageReference Include="Wasi.Sdk" Version="0.1.2-preview.10061" />
   </ItemGroup>
 
 </Project>
