updated aks_wasm_dotnet sample

--- a/aks_wasm_dotnet/aspnetcore_wasm/aspnetcore_wasm.csproj
+++ b/aks_wasm_dotnet/aspnetcore_wasm/aspnetcore_wasm.csproj
@@ -10,8 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-preview.5.22303.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Wasi.AspNetCore.Server.Native" Version="0.1.1" />
-    <PackageReference Include="Wasi.Sdk" Version="0.1.1" />
+    <PackageReference Include="Wasi.AspNetCore.Server.Native" Version="0.1.2-preview.10061" />
+    <PackageReference Include="Wasi.Sdk" Version="0.1.4-preview.10020" />
   </ItemGroup>
 
 </Project>
