--- a/aks_workload_identity/deploy/deployment.yaml
+++ b/aks_workload_identity/deploy/deployment.yaml
@@ -13,8 +13,8 @@ spec:
       labels:
         app: az-cli
         azure.workload.identity/use: "true"
-      annotations:
-        azure.workload.identity/inject-proxy-sidecar: "true"
+      # annotations:
+      #   azure.workload.identity/inject-proxy-sidecar: "true"
     spec:
       serviceAccountName: workload-identity-test-account
       containers:
