Update web API target port and container image version, add new Welcome function

--- a/aca.functions/src/dotnet/Properties/launchSettings.json
+++ b/aca.functions/src/dotnet/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "dotnet": {
+    "src": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7061",
+      "commandLineArgs": "--port 7074",
       "launchBrowser": false
     }
   }
