--- a/aoai.plugins/src/Chat.Console/Chat.Console.csproj
+++ b/aoai.plugins/src/Chat.Console/Chat.Console.csproj
@@ -9,14 +9,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.28.240212.1" />
+    <PackageReference Include="Microsoft.KernelMemory.Abstractions" Version="0.34.240313.1" />
+    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.34.240313.1" />
     <PackageReference Include="Microsoft.KernelMemory.SemanticKernelPlugin" Version="0.32.240308.1" />
-    <PackageReference Include="Microsoft.KernelMemory.WebClient" Version="0.32.240308.1" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.5.0" />
-    <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.5.0" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.5.0" />
+    <PackageReference Include="Microsoft.KernelMemory.WebClient" Version="0.34.240313.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.6.2" />
+    <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.6.2" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.2" />
     <PackageReference Include="Microsoft.SemanticKernel.Plugins.OpenApi" Version="1.5.0-alpha" />
   </ItemGroup>
 
