--- a/aks_restrict_egress_cni_overlay/k8s/deployment.yaml
+++ b/aks_restrict_egress_cni_overlay/k8s/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aks-helloworld-one  
+  name: aks-helloworld-one
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: aks-helloworld-one
@@ -13,22 +13,24 @@ spec:
         app: aks-helloworld-one
     spec:
       containers:
-      - name: aks-helloworld-one
-        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
-        ports:
-        - containerPort: 80
-        env:
-        - name: TITLE
-          value: "Welcome to Azure Kubernetes Service (AKS)"
+        - name: aks-helloworld-one
+          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
+          ports:
+            - containerPort: 80
+          env:
+            - name: TITLE
+              value: "Welcome to Azure Kubernetes Service (AKS)"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: aks-helloworld-one  
+  name: aks-helloworld-one
 spec:
   type: ClusterIP
   ports:
-  - port: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
   selector:
     app: aks-helloworld-one
 
@@ -37,19 +39,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-world-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx-internal
   rules:
-  - http:
-      paths:
-      - path: /(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: aks-helloworld-one
-            port:
-              number: 80
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: aks-helloworld-one
+                port:
+                  number: 80
+
